# Task-Management

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: tasks.py  user.py
app/core/: tasks.py  user.py
app/database/: database.py
app/models/: db_model.py
app/schemas/: tasks.py  user.py
database/: database.py
