[tool.poetry]
name = "task manangement app"
version = "0.1.0"
description = "This is a basic which helps in managing tasks between multiple users"
authors = ["Chethan <chetan.ratnappa@ni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
