[tool.poetry]
name = "task manangement app"
version = "0.1.0"
description = "This is a basic which helps in managing tasks between multiple users"
authors = ["Chethan <chetan.ratnappa@ni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
